# remote-control

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  docker-compose.yml  release-please-config.json
.github/: commit-convention.md
.github/workflows/: release.yml
agent/: pubspec.yaml
agent/android/: gradlew  gradlew.bat  settings.gradle.kts
agent/android/app/: build.gradle.kts
agent/lib/: main.dart
agent/lib/src/bridge/: rust_core.dart
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/admin/: router.py
backend/app/auth/: dependencies.py  jwt_service.py  ldap_provider.py  local_provider.py  models.py  router.py
backend/app/common/: exceptions.py  middleware.py
backend/app/file_transfer/: models.py  router.py
backend/app/notifications/: __init__.py  tasks.py
backend/app/pairing/: router.py
backend/app/sessions/: models.py  router.py  signaling.py
backend/tests/: conftest.py
backend/tests/admin/: test_admin_router.py
backend/tests/auth/: test_auth_router.py  test_jwt_service.py
backend/tests/file_transfer/: test_file_transfer_router.py
backend/tests/sessions/: test_session_router.py  test_signaling.py
docs/: release-please.md
docs/superpowers/plans/: 2026-04-09-phase4-hardening.md
docs/superpowers/specs/: 2026-04-09-phase4-hardening-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/store/: auth.ts
infra/coturn/: turnserver.conf
infra/nginx/: nginx.conf
infra/postgres/: init.sql
prisma/: package.json  schema.prisma
rc-core/: Cargo.toml
rc-core/src/: bridge.rs  error.rs  lib.rs
rc-core/src/capture/: mod.rs
rc-core/src/crypto/: mod.rs
rc-core/src/input/: mod.rs
rc-core/src/webrtc/: mod.rs
scripts/deploy/android/: build-apk.ps1
(+32 files in other folders)
