[package]
name = "rc-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rc_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# flutter_rust_bridge 바인딩
flutter_rust_bridge = "2"

# 화면 캡처
scrap = "0.5"

# 입력 제어
enigo = "0.2"

# WebRTC
webrtc = "0.11"

# 암호화
ring = "0.17"
base64 = "0.22"

# 비동기
tokio = { version = "1", features = ["full"] }

# 에러 처리
anyhow = "1"
thiserror = "1"

# 로깅
tracing = "0.1"
tracing-subscriber = "0.3"

# 직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.57", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
